k8s/kuard-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
  - image: jmutai/kuard-amd64:blue
    name: kuard
    livenessProbe:
      httpGet:
        path: /healthy
        port: 8080
      initialDelaySeconds: 15
      timeoutSeconds: 2
      periodSeconds: 20
      failureThreshold: 3
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 5
      failureThreshold: 3
      successThreshold: 1
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
