k8s/snowflake-id-generator-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: snowflake-id-generator
spec:
  automountServiceAccountToken: false
  containers:
    - image: seneka810/snowflake-id-generator:v1
      name: snowflake-id-generator
      resources:
        requests:
          cpu: "250m"
          memory: "256Mi"
          ephemeral-storage: "1Gi"
        limits:
          memory: "512Mi"
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
