k8s/snowflake-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: snowflake-id-generator
spec:
  automountServiceAccountToken: false
  containers:
  - image: seneka810/snowflake-id-generator:v1
    name: snowflake-id-generator
    resources:
      requests:
        cpu: "250m"
        memory: "256Mi"
        ephemeral-storage: "1Gi"
      limits:
        memory: "512Mi"
    ports:
      - containerPort: 8080
        name: http
        protocol: TCP
    livenessProbe:
      httpGet:
        path: /management/health/livenessState
        port: 8080
      initialDelaySeconds: 15
      timeoutSeconds: 2
      periodSeconds: 20
      failureThreshold: 3
    readinessProbe:
      httpGet:
        path: /management/health/readinessState
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 5
      failureThreshold: 3
      successThreshold: 1
