k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  selector:
    app: kuard
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
