k8s/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snowflake-ingress
spec:
  ingressClassName: contour
  rules:
  - host: snowflake.dev.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: snowflake
              port:
                number: 80
